<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawer_layout_bg"
        android:orientation="vertical"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginTop="-1dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark">

            <ImageButton
                android:id="@+id/drawer_back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_arrow_light_36"
                android:background="@drawable/transparent_ripple_bg_light"
                android:onClick="drawerBackButtonOnClick"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="Settings"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_option"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/drawer_item_text_size"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all_urgent_homework"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/drawer_item_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_current_week"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/drawer_item_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all_weeks"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/drawer_item_text_size"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/drawer_item_text_size" />
</RelativeLayout>